--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,7 @@
 
 DEB_COMPRESS_EXCLUDE := .pdf	# The PDF doc will not be compressed
 
+include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
