It is "Uploader_s_" and bumped policy version.

--- a/control
+++ b/control
@@ -3,9 +3,10 @@ Section: science
 Priority: optional
 Maintainer: Debian-Med Packaging Team <debian-med-packaging@lists.alioth.debian.org>
 DM-Upload-Allowed: yes
-Uploader: Charles Plessy <plessy@debian.org>
+Uploaders: Charles Plessy <plessy@debian.org>,
+ Andreas Tille <tille@debian.org>
 Build-Depends: cdbs, debhelper (>= 7), quilt, zlib1g-dev
-Standards-Version: 3.7.3
+Standards-Version: 3.8.0
 Homepage: http://www.ebi.ac.uk/~zerbino/velvet/
 Vcs-Browser: http://svn.debian.org/wsvn/debian-med/trunk/packages/velvet/trunk/?rev=0&sc=0
 Vcs-Svn: svn://svn.debian.org/svn/debian-med/trunk/packages/velvet/trunk/
