--- a/control
+++ b/control
@@ -5,7 +5,7 @@ Maintainer: Debian-Med Packaging Team <debian-med-packaging@lists.alioth.debian.
 DM-Upload-Allowed: yes
 Uploaders: Charles Plessy <plessy@debian.org>,
  Andreas Tille <tille@debian.org>
-Build-Depends: cdbs, debhelper (>= 7), quilt, zlib1g-dev
+Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev
 Standards-Version: 3.8.0
 Homepage: http://www.ebi.ac.uk/~zerbino/velvet/
 Vcs-Browser: http://svn.debian.org/wsvn/debian-med/trunk/packages/velvet/trunk/?rev=0&sc=0
@@ -14,6 +14,7 @@ Vcs-Svn: svn://svn.debian.org/svn/debian-med/trunk/packages/velvet/trunk/
 Package: velvet
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Suggests: velvet-example
 Description: Nucleic acid sequence assembler for very short reads
  Velvet is a de novo genomic assembler specially designed for short read
  sequencing technologies, such as Solexa or 454, developed by Daniel Zerbino and
@@ -27,3 +28,9 @@ Description: Nucleic acid sequence assembler for very short reads
  Velvet was published in: `Velvet: algorithms for de novo short read assembly
  using de Bruijn graphs.  D.R. Zerbino and E. Birney. Genome Research
  18:821-829.'
+
+Package: velvet-example
+Architecture: all
+Description: Example data for the Velvet sequence assembler.
+ This package contains the example data distributed in the sources of Velvet,
+ a de novo genomic assembler. 
