--- a/control
+++ b/control
@@ -5,7 +5,7 @@ Maintainer: Debian-Med Packaging Team <debian-med-packaging@lists.alioth.debian.
 DM-Upload-Allowed: yes
 Uploaders: Charles Plessy <plessy@debian.org>,
  Andreas Tille <tille@debian.org>
-Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev
+Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev, quilt
 Standards-Version: 3.8.0
 Homepage: http://www.ebi.ac.uk/~zerbino/velvet/
 Vcs-Browser: http://svn.debian.org/wsvn/debian-med/trunk/packages/velvet/trunk/?rev=0&sc=0
