--- a/rules
+++ b/rules
@@ -5,4 +5,4 @@ DEB_COMPRESS_EXCLUDE := .pdf	# The PDF doc will not be compressed
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
-DEB_MAKE_BUILD_TARGET = obj velveth velvetg Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT=''
+DEB_MAKE_BUILD_TARGET = obj velveth velvetg Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
