--- a/control
+++ b/control
@@ -5,8 +5,8 @@ Maintainer: Debian-Med Packaging Team <debian-med-packaging@lists.alioth.debian.
 DM-Upload-Allowed: yes
 Uploaders: Charles Plessy <plessy@debian.org>,
  Andreas Tille <tille@debian.org>
-Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev, quilt
-Standards-Version: 3.8.0
+Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev, quilt, help2man
+Standards-Version: 3.8.1
 Homepage: http://www.ebi.ac.uk/~zerbino/velvet/
 Vcs-Browser: http://svn.debian.org/wsvn/debian-med/trunk/packages/velvet/trunk/?rev=0&sc=0
 Vcs-Svn: svn://svn.debian.org/svn/debian-med/trunk/packages/velvet/trunk/
@@ -33,5 +33,14 @@ Package: velvet-example
 Architecture: all
 Depends: ${misc:Depends}
 Description: Example data for the Velvet sequence assembler
+ Velvet is a de novo genomic assembler specially designed for short read
+ sequencing technologies, such as Solexa or 454, developed by Daniel Zerbino and
+ Ewan Birney at the European Bioinformatics Institute (EMBL-EBI), near
+ Cambridge, in the United Kingdom.
+ .
+ Velvet currently takes in short read sequences, removes errors then produces
+ high quality unique contigs. It then uses paired read information, if
+ available, to retrieve the repeated areas between contigs.
+ .
  This package contains the example data distributed in the sources of Velvet,
  a de novo genomic assembler. 
