--- a/debian/rules
+++ b/debian/rules
@@ -11,15 +11,15 @@ pkg=velvet
 DEB_MAKE_BUILD_TARGET = obj velveth velvetg Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
 
 build/velvet::
-	make color Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
+	make color CFLAGS='$(CFLAGS)' Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
 	mkdir -p $(CURDIR)/debian/$(pkg)/usr/share/man/man1/
 	help2man --no-info --name="simple hashing program" \
 	         $(CURDIR)/velveth > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velveth.1
 	help2man --no-info --name="simple hashing program (colorspace version)" \
 	         $(CURDIR)/velveth_de > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velveth_de.1
-#	help2man --no-info --version-option=" " \
-#	         --name="de Bruijn graph construction, error removal and repeat resolution" \
-#	         $(CURDIR)/velvetg > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg.1
-#	help2man --no-info --version-option=" " \
-#	         --name="de Bruijn graph construction, error removal and repeat resolution (colorspace version)" \
-#	         $(CURDIR)/velvetg_de > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg_de.1
+	help2man --no-info --version-option=" " \
+	         --name="de Bruijn graph construction, error removal and repeat resolution" \
+	         $(CURDIR)/velvetg > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg.1
+	help2man --no-info --version-option=" " \
+	         --name="de Bruijn graph construction, error removal and repeat resolution (colorspace version)" \
+	         $(CURDIR)/velvetg_de > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg_de.1
