--- a/rules
+++ b/rules
@@ -2,16 +2,21 @@
 
 DEB_COMPRESS_EXCLUDE := .pdf	# The PDF doc will not be compressed
 
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
+build/velvet::
+	touch zlib # prevents the zlib in the ‘third-party’ folder to be built.
+
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
+clean::
+	$(RM) zlib
+
 pkg=velvet
 
-DEB_MAKE_BUILD_TARGET = obj velveth velvetg Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
+DEB_MAKE_BUILD_TARGET = obj velveth velvetg Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT=''
 
 build/velvet::
-	make color CFLAGS='$(CFLAGS)' Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT='' Z_LIB_INC='/usr/include'
+	make color CFLAGS='$(CFLAGS)' Z_LIB_FILES='' LDFLAGS='-lm -lz' OPT=''
 	mkdir -p $(CURDIR)/debian/$(pkg)/usr/share/man/man1/
 	help2man --no-info --name="simple hashing program" \
 	         $(CURDIR)/velveth > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velveth.1
