New upstream release correcting bugs and enhancing documentation.
Packaging changes:
  * Multi-Arch support (‘foreign’) in debian/control.
  * Corrected debian/install to avoid ugly ‘contrib/contrib’ location.

--- a/control
+++ b/control
@@ -13,6 +13,7 @@ Vcs-Svn: svn://svn.debian.org/svn/debian-med/trunk/packages/velvet/trunk/
 
 Package: velvet
 Architecture: any
+Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: velvet-example
 Description: Nucleic acid sequence assembler for very short reads
