--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
 Source: velvet
 Section: science
 Priority: optional
-Maintainer: Debian-Med Packaging Team <debian-med-packaging@lists.alioth.debian.org>
+Maintainer: Debian Med Packaging Team <debian-med-packaging@lists.alioth.debian.org>
 DM-Upload-Allowed: yes
 Uploaders: Charles Plessy <plessy@debian.org>,
  Andreas Tille <tille@debian.org>
-Build-Depends: cdbs, debhelper (>= 7), zlib1g-dev, help2man
+Build-Depends: cdbs, debhelper (>= 7.1), zlib1g-dev, help2man
 Standards-Version: 3.8.3
 Homepage: http://www.ebi.ac.uk/~zerbino/velvet/
 Vcs-Browser: http://svn.debian.org/wsvn/debian-med/trunk/packages/velvet/trunk/?rev=0&sc=0
