--- a/rules
+++ b/rules
@@ -7,6 +7,7 @@ build/velvet::
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
+include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 clean::
 	$(RM) zlib
