New upstream version, get-orig-source target to strip zlib copy

--- a/debian/rules
+++ b/debian/rules
@@ -29,3 +29,7 @@ build/velvet::
 	help2man --no-info --version-option=" " \
 	         --name="de Bruijn graph construction, error removal and repeat resolution (colorspace version)" \
 	         $(CURDIR)/velvetg_de > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg_de.1
+
+get-orig-source:
+	. debian/get-orig-source
+
