--- a/debian/rules
+++ b/debian/rules
@@ -1,23 +1,23 @@
 #!/usr/bin/make -f
 
-DEB_COMPRESS_EXCLUDE := .pdf	# The PDF doc will not be compressed
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
-build/velvet::
-	touch zlib # prevents the zlib in the ‘third-party’ folder to be built.
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
-
-clean::
-	$(RM) zlib
+%:
+	dh  $@ --with quilt
 
 pkg=velvet
 
-DEB_MAKE_BUILD_TARGET = obj velveth velvetg LDFLAGS='-lm -lz' OPT=''
+override_dh_auto_clean :
+	dh_auto_clean
+	rm -rf zlib
 
-build/velvet::
-	make color CFLAGS='$(CFLAGS)' LIBS='-lm -lz' OPT=''
+override_dh_auto_build :
+	touch zlib # prevents the zlib in the ‘third-party’ folder to be built.
+	dh_auto_build
+	dh_auto_build -- color
+
+override_dh_install :
 	mkdir -p $(CURDIR)/debian/$(pkg)/usr/share/man/man1/
 	help2man --no-info --name="simple hashing program" \
 	         $(CURDIR)/velveth > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velveth.1
@@ -29,11 +29,17 @@ build/velvet::
 	help2man --no-info --version-option=" " \
 	         --name="de Bruijn graph construction, error removal and repeat resolution (colorspace version)" \
 	         $(CURDIR)/velvetg_de > $(CURDIR)/debian/$(pkg)/usr/share/man/man1/velvetg_de.1
-
-#If the taball is not being scrubbed we need this.
-binary-install/velvet::
+	dh_install
+	#If the tarball is not being scrubbed we need this.
 	find $(CURDIR)/debian/$(pkg) -name '.DS_Store' -exec rm {} \;
 	rm -rf $(CURDIR)/debian/$(pkg)/usr/share/velvet/contrib/MetaVelvet*
+
+#Prevent compression of user manual
+override_dh_compress :
+	dh_compress -X.pdf
+
+override_dh_pysupport :
+	#Not needed, Python scripts are just for examples
 
 get-orig-source:
 	. debian/get-orig-source
