--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Vcs-Svn: svn://svn.debian.org/debian-med/trunk/packages/velvet/trunk/
 Package: velvet
 Architecture: any
 Multi-Arch: foreign
+Pre-Depends: dpkg (>= 1.15.6)
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: python
 Suggests: velvet-example
@@ -29,6 +30,7 @@ Description: Nucleic acid sequence assembler for very short reads
 
 Package: velvet-example
 Architecture: all
+Pre-Depends: dpkg (>= 1.15.6)
 Depends: ${misc:Depends}
 Description: Example data for the Velvet sequence assembler
  Velvet is a de novo genomic assembler specially designed for short read
